# plane

./: CMakeLists.txt
gui/qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
include/: SensStudy.h  main.h  sensvarsandeq.h
src/: Backup_ver_without_monte  CMakeLists.txt  SensStudy  SensStudy.cpp  main.cpp  physics.cpp  physics.h  sensmontetest.cpp  sim.cpp  sim.h
